[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/textures/result_screen.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/player_walk.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/cooking_pot.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/FT88-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://screens/Title.gd" type="Script" id=5]
[ext_resource path="res://assets/3rd/ludumdare.png" type="Texture" id=6]
[ext_resource path="res://addons/sxgd/nodes/ui/SxFullScreenConfirmationDialog.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 128 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 96
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 48
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 1 )

[node name="Shade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.752941 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 394, 476 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 5 )
frame = 3
playing = true

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 617, 483 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_lock_": true
}

[node name="HighScoreContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
__meta__ = {
"_edit_lock_": true
}

[node name="HighScoreLabel" type="Label" parent="MarginContainer/HighScoreContainer"]
margin_right = 984.0
margin_bottom = 33.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 7 )
text = "High Score"
align = 1
valign = 1

[node name="HighScoreValue" type="Label" parent="MarginContainer/HighScoreContainer"]
margin_top = 37.0
margin_right = 984.0
margin_bottom = 62.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 8 )
text = "0"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_top = 231.0
margin_right = 1024.0
margin_bottom = 368.0

[node name="Title" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 100.0
rect_min_size = Vector2( 1024, 100 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center][shake level=10][color=#880088]Type[/color][/shake][shake level=10]-[/shake][shake level=10][color=green]Eat[/color][/shake][/center]"
text = "Type-Eat"
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 1024.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 9 )
text = "Press Enter to Play"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 721.0
margin_top = 32.0
margin_right = 1019.0
margin_bottom = 83.0
rect_rotation = 19.8
texture = ExtResource( 6 )
expand = true

[node name="LD" type="RichTextLabel" parent="."]
margin_left = 781.0
margin_top = 112.0
margin_right = 910.0
margin_bottom = 159.0
rect_rotation = 18.6
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[center][color=red][shake]52[/shake][/color][center]"
text = "52"
scroll_active = false

[node name="EraseData" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -338.0
margin_top = -33.0
custom_fonts/font = SubResource( 11 )
text = "Press F10 to clear game data"
align = 1
valign = 1

[node name="EraseDataDialog" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
title = ""
show_title = false
message = "Are you sure you want to clear your data?"
